# algorithms

./: .gitignore  Makefile  README.md  devops_enr.py  elem_iterable.py  input_join.txt  join.py  n_iter.txt  private_element.py  pyproject.toml  ruff.toml
backend/: deque.py  example  inp_str_report.txt  inp_vacancy  inp_vaconcy_all.txt  input.txt  input_report.txt  maze.py  report.py  staples.py  staples_test.py  vacancy.py  word_optimize.py  words.py
coderun/: 155_unique.py  182_closedkey.py  187_beach.py  204_errors.py  251_symbol.py  324_ostap.py  344_chekers.py  349_json.py  352_jewel.py  357_graph.py  360_private_element.py
demo/: a_plus_b.py  a_plus_b_file.py  a_plus_b_stdin.py  rock.py
edu/: trainig_1.py
handbook/: README.md  intership2022.py
interview yandex/: interview.py
interview_tasks/: devops_enr.py  mro.py  mutable_link.py  yield_foo.py
leetcode/: 167_TwoSum.py  189_RotateArray.py  19_Remove Nth Node From End of List.py  205_IsomorphicString.py  278_First_Bad_Version.py  283_Move Zeroes.py  344_Reverse String.py  35_SearchInsertPosition.py  383_RansomNote.py  392_IsSubsequense.py  3_Longest Substring Without Repeating Characters.py  557_Reverse Words in a String III.py  704_BinarySeaarch.py  724_FindPivotindex.py  977_Squares of a Sorted Array.py  leetcode_test.py
other/: str_reverse.py
practikum/: min_distance.py  sieve_eratosfen.py  sleight_of_hand.py  test
ya_algoritm/: ex_join  input_data.txt
ya_backend_school/: _stdin_tmpl.py  deque.py
ya_interview/: arr_sort.py  array_merge.py  bankomat.py  bubble.py  graph_path.py  reverse.py  (+4 more)
(+922 files in other folders)
