[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Vadim Barsukov <v.bars@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.7.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
